<resources>
    <string name="app_name">Enternot</string>
    <string name="voice_off">Voice Off</string>
    <string name="voice_on">Voice On</string>
    <string name="camera_rotation_off">Camera Rotation Off</string>
    <string name="camera_rotation_on">Camera Rotation On</string>
    <string name="siren">Siren</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="hostname">Hostname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="test_connection">Validate Connection</string>
    <string name="enternot_settings">Enternot Settings</string>
    <string name="save">Save</string>
    <string name="preference_file_key">enternot_configuration_values</string>
    <string name="siren_icon">Siren Icon</string>
    <string name="calibration_dialog_message">Lay the phone down on a table or a flat area. Then press start to start the calibration.</string>
    <string name="calibration_dialog_title">Camera Movement Calibration</string>
    <string name="calibration_dialog_positive_button">Start</string>
    <string name="calibration_dialog_negative_button">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
